--- a/analyzers/TorProject/TorProject.json
+++ b/analyzers/TorProject/TorProject.json
@@ -1,6 +1,7 @@
 {
     "name": "TorProject",
     "author": "@srilumpa",
+    "license": "AGPL-V3",
     "url": "https://github.com/srilumpa/Cortex-Analyzers",
     "version": "2.0",
     "baseConfig": "TorProject",
