--- a/analyzers/TorProject/TorProject.json
+++ b/analyzers/TorProject/TorProject.json
@@ -1,8 +1,8 @@
 {
     "name": "TorProject",
-    "author": "@srilumpa",
+    "author": "Marc-André DOLL, STARC by EXAPROBE",
     "license": "AGPL-V3",
-    "url": "https://github.com/srilumpa/Cortex-Analyzers",
+    "url": "https://github.com/CERT-BDF/Cortex-Analyzers",
     "version": "1.0",
     "baseConfig": "TorProject",
     "config": {
