--- a/analyzers-docker/MsgParser/Dockerfile
+++ b/analyzers-docker/MsgParser/Dockerfile
@@ -1,5 +1,5 @@
 FROM cortex-base-python2
-ADD ./MsgParser /analyzer
+ADD ./analyzers/MsgParser /analyzer
 WORKDIR /analyzer
 RUN pip install --no-cache-dir -r requirements.txt
 
