--- a/analyzers/TorProject/TorProject.json
+++ b/analyzers/TorProject/TorProject.json
@@ -4,12 +4,27 @@
     "license": "AGPL-V3",
     "url": "https://github.com/CERT-BDF/Cortex-Analyzers",
     "version": "1.0",
-    "baseConfig": "TorProject",
-    "config": {
-        "check_tlp": false,
-        "max_tlp": 3
-    },
     "description": "Query https://check.torproject.org/exit-addresses for TOR exit nodes IP addresses.",
     "dataTypeList": ["ip"],
-    "command": "TorProject/tor_project_analyzer.py"
+    "command": "TorProject/tor_project_analyzer.py",
+    "baseConfig": "TorProject",
+    "config": {},
+    "configurationItems": [
+      {
+        "name": "check_tlp",
+        "description": "Define if the analyzer should check TLP of data before running",
+        "type": "boolean",
+        "multi": false,
+        "required": true,
+        "defaultValue": false
+      },
+      {
+        "name": "max_tlp",
+        "description": "Define the maximum TLP level autorized",
+        "type": "number",
+        "multi": false,
+        "required": true,
+        "defaultValue": 3
+      }
+    ]
 }
