#172 update config files

--- a/analyzers/C1fApp/C1fApp_osint.json
+++ b/analyzers/C1fApp/C1fApp_osint.json
@@ -27,6 +27,22 @@
       "multi": false,
       "required": true,
       "defaultValue": 1
+    },
+    {
+      "name": "url",
+      "description": "URL of C1fApp service",
+      "type": "string",
+      "multi": false,
+      "required": true,
+      "defaultValue": "Server1"
+    },
+    {
+      "name": "key",
+      "description": "API key",
+      "type": "string",
+      "multi": false,
+      "required": true,
+      "defaultValue": "API key"
     }
   ]
 }
