--- a/analyzers/TorProject/TorProject.json
+++ b/analyzers/TorProject/TorProject.json
@@ -25,6 +25,30 @@
         "multi": false,
         "required": true,
         "defaultValue": 3
+      },
+      {
+        "name": "ttl",
+        "description": "Define the TTL",
+        "type": "number",
+        "multi": false,
+        "required": true,
+        "defaultValue": 86400
+      },
+      {
+        "name": "cache.duration",
+        "description": "Define the cache duration",
+        "type": "number",
+        "multi": false,
+        "required": true,
+        "defaultValue": 3600
+      },
+      {
+        "name": "cache.root",
+        "description": "Define the path to the stored data",
+        "type": "string",
+        "multi": false,
+        "required": false,
+        "defaultValue": "/tmp/cortex/tor_project"
       }
     ]
 }
