--- a/analyzers/C1fApp/C1fApp_osint.json
+++ b/analyzers/C1fApp/C1fApp_osint.json
@@ -6,6 +6,7 @@
     "license": "AGPL-V3",
     "description": "Query C1fApp OSINT Aggregator for IPs, domains and URLs",
     "dataTypeList": ["url", "domain", "ip"],
+    "baseConfig": "C1fApp",
     "command": "C1fApp/cifquery.py",
     "configurationItems": [
     {
