--- a/analyzers/TorProject/TorProject.json
+++ b/analyzers/TorProject/TorProject.json
@@ -7,6 +7,7 @@
   "description": "Query https://check.torproject.org/exit-addresses for TOR exit nodes IP addresses.",
   "dataTypeList": ["ip"],
   "command": "TorProject/tor_project_analyzer.py",
+  "baseConfig": "TorProject",
   "configurationItems": [
     {
       "name": "ttl",
