Reset analyzers to master branch

--- a/analyzers/TorProject/TorProject.json
+++ b/analyzers/TorProject/TorProject.json
@@ -5,29 +5,10 @@
   "url": "https://github.com/TheHive-Project/Cortex-Analyzers",
   "version": "1.0",
   "description": "Query https://check.torproject.org/exit-addresses for TOR exit nodes IP addresses.",
-  "dataTypeList": [
-    "ip"
-  ],
+  "dataTypeList": ["ip"],
   "command": "TorProject/tor_project_analyzer.py",
   "baseConfig": "TorProject",
-  "config": {},
   "configurationItems": [
-    {
-      "name": "check_tlp",
-      "description": "Define if the analyzer should check TLP of data before running",
-      "type": "boolean",
-      "multi": false,
-      "required": true,
-      "defaultValue": false
-    },
-    {
-      "name": "max_tlp",
-      "description": "Define the maximum TLP level autorized",
-      "type": "number",
-      "multi": false,
-      "required": true,
-      "defaultValue": 3
-    },
     {
       "name": "ttl",
       "description": "Define the TTL",
@@ -49,8 +30,7 @@
       "description": "Define the path to the stored data",
       "type": "string",
       "multi": false,
-      "required": false,
-      "defaultValue": "/tmp/cortex/tor_project"
+      "required": false
     }
   ]
 }
