--- a/analyzers-docker/MaxMind/Dockerfile
+++ b/analyzers-docker/MaxMind/Dockerfile
@@ -2,4 +2,4 @@ FROM cortex-base-python3
 ADD ./analyzers/MaxMind /analyzer
 WORKDIR /analyzer
 RUN pip3 install --no-cache-dir -r requirements.txt
-
+CMD geo.py
