Fixes bug in Dockerfiles

--- a/analyzers-docker/Abuse_Finder/Dockerfile
+++ b/analyzers-docker/Abuse_Finder/Dockerfile
@@ -2,4 +2,4 @@ FROM cortex-base-python2
 ADD ./analyzers/Abuse_Finder /analyzer
 WORKDIR /analyzer
 RUN pip install --no-cache-dir -r requirements.txt
-CMD abusefinder.py
+CMD ./abusefinder.py
