--- a/analyzers/FileInfo/requirements.txt
+++ b/analyzers/FileInfo/requirements.txt
@@ -5,6 +5,6 @@ pyexifinfo
 pefile
 git+https://github.com/AnyMaster/pehashng
 git+https://github.com/Rafiot/pdfid.git
-oletools
+oletools>=0.52
 git+https://github.com/mattgwwalker/msg-extractor.git
 IMAPClient
