--- a/analyzers/FileInfo/Dockerfile
+++ b/analyzers/FileInfo/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3
 
-WORKDIR /analyzer
+WORKDIR /worker
 COPY . FileInfo
 RUN apt update                                                  && \
     apt install -y -q libfuzzy-dev libimage-exiftool-perl       && \
     rm -rf /var/lib/apt/lists/*                                 && \
     pip install --no-cache-dir -r FileInfo/requirements.txt
-CMD FileInfo/fileinfo_analyzer.py
+ENTRYPOINT FileInfo/fileinfo_analyzer.py
