--- a/.drone.yml
+++ b/.drone.yml
@@ -44,3 +44,81 @@ steps:
       password: {from_secret: docker_password}
     when:
       event: {exclude: [tag]}
+
+  - name: build stable catalogs
+    image: thehiveproject/neurons-build-catalogs
+    settings:
+      branch: master
+    when:
+      event: [tag]
+  
+  - name: build develop catalog
+    image: thehiveproject/neurons-build-catalogs
+    when:
+      branch:
+      - develop
+      event:
+      - push
+  
+  - name: upload catalogs to bintray
+    image: thehiveproject/drone-bintray
+    settings:
+      user: {from_secret: bintray_user}
+      key: {from_secret: bintray_key}
+      subject: thehive-project
+      package: cortexneurons
+      commands:
+      - |
+        export PLUGIN_USER
+        export PLUGIN_KEY
+        export PLUGIN_SUBJECT
+        export PLUGIN_PACKAGE
+
+        upload \
+        --file analyzers/analyzers.json \
+        --repo cortexneurons
+
+        upload \
+        --file analyzers/analyzers-stable.json \
+        --repo cortexneurons
+
+        upload \
+        --file responders/responders.json \
+        --repo cortexneurons
+
+        upload \
+        --file responders/responders-stable.json \
+        --repo cortexneurons
+
+    when:
+      event: [tag]
+
+- name: upload catalogs to bintray
+    image: thehiveproject/drone-bintray
+    settings:
+      user: {from_secret: bintray_user}
+      key: {from_secret: bintray_key}
+      subject: thehive-project
+      package: cortexneurons
+      commands:
+      - |
+        export PLUGIN_USER
+        export PLUGIN_KEY
+        export PLUGIN_SUBJECT
+        export PLUGIN_PACKAGE
+
+        upload \
+        --file analyzers/analyzers-devel.json \
+        --repo cortexneurons
+
+        upload \
+        --file responders/responders-devel.json \
+        --repo cortexneurons
+
+
+    when:
+      event:
+        branch:
+        - develop
+        event:
+        - push
