--- a/.drone.yml
+++ b/.drone.yml
@@ -54,12 +54,14 @@ steps:
       user: {from_secret: bintray_user}
       key: {from_secret: bintray_key}
       subject: thehive-project
+      package: catalogs
       version: latest
     commands:
     - |
       export PLUGIN_USER
       export PLUGIN_KEY
       export PLUGIN_SUBJECT
+      export PLUGIN_PACKAGE
       export PLUGIN_VERSION
       upload \
       --file analyzers/analyzers.json \
@@ -82,12 +84,14 @@ steps:
       user: {from_secret: bintray_user}
       key: {from_secret: bintray_key}
       subject: thehive-project
+      package: catalogs
       version: latest
     commands:
     - |
       export PLUGIN_USER
       export PLUGIN_KEY
       export PLUGIN_SUBJECT
+      export PLUGIN_PACKAGE
       export PLUGIN_VERSION
       upload \
       --file analyzers/analyzers-devel.json \
