--- a/analyzers/Autofocus/requirements.txt
+++ b/analyzers/Autofocus/requirements.txt
@@ -1,2 +1,2 @@
 cortexutils
-git+https://github.com/PaloAltoNetworks/autofocus-client-library ; python_version<='2.7'
+git+https://github.com/PaloAltoNetworks/autofocus-client-library
