--- a/analyzers/Cyberprotect/Dockerfile
+++ b/analyzers/Cyberprotect/Dockerfile
@@ -1,6 +1,6 @@
+### AUTOGEN ###
 # THIS FILE IS UPDATED BY `utils/dockerfile_builder.py`
 # DO NOT EDIT IT DIRECTLY
-
 
 # Guessing base image from source code shebang
 FROM python:2-alpine
