--- a/analyzers/DomainTools/Dockerfile
+++ b/analyzers/DomainTools/Dockerfile
@@ -1,9 +1,11 @@
+### AUTOGEN ###
 # THIS FILE IS UPDATED BY `utils/dockerfile_builder.py`
 # DO NOT EDIT IT DIRECTLY
 
-
 # Guessing base image from source code shebang
 FROM python:2-alpine
+
+RUN apk add --no-cache git
 
 LABEL name="DomainTools_WhoisHistory"
 LABEL description="Use DomainTools to get a list of historical Whois records associated with a domain name."
