--- a/analyzers/EmlParser/Dockerfile
+++ b/analyzers/EmlParser/Dockerfile
@@ -1,9 +1,11 @@
+### AUTOGEN ###
 # THIS FILE IS UPDATED BY `utils/dockerfile_builder.py`
 # DO NOT EDIT IT DIRECTLY
 
-
 # Guessing base image from source code shebang
 FROM python:3-alpine
+
+RUN apk add --no-cache libmagic
 
 LABEL name="EmlParser"
 LABEL description="Parse Eml message"
