--- a/analyzers/Malpedia/Dockerfile
+++ b/analyzers/Malpedia/Dockerfile
@@ -1,9 +1,11 @@
+### AUTOGEN ###
 # THIS FILE IS UPDATED BY `utils/dockerfile_builder.py`
 # DO NOT EDIT IT DIRECTLY
 
-
 # Guessing base image from source code shebang
 FROM python:3-alpine
+
+RUN apk add --no-cache gcc
 
 LABEL name="Malpedia"
 LABEL description="Check files against Malpedia YARA rules."
