[WIP] Updated dockerfiles. Pending tests

--- a/analyzers/EmailRep/Dockerfile
+++ b/analyzers/EmailRep/Dockerfile
@@ -5,15 +5,15 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="Nessus"
-LABEL description="Use Nessus Professional to scan hosts."
-LABEL author="Guillaume Rousse"
+LABEL name="EmailRep"
+LABEL description="emailrep.io lookup."
+LABEL author="Manabu Niseki"
 
 WORKDIR /worker
 
-COPY . Nessus
+COPY . EmailRep
 
 # Project determined to be Python, installing deps
-RUN pip install --no-cache-dir -r Nessus/requirements.txt
+RUN pip install --no-cache-dir -r EmailRep/requirements.txt
 
-ENTRYPOINT Nessus/nessus.py
+ENTRYPOINT EmailRep/emailrep_analyzer.py
