--- a/analyzers/IPinfo/Dockerfile
+++ b/analyzers/IPinfo/Dockerfile
@@ -5,15 +5,15 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="Nessus"
-LABEL description="Use Nessus Professional to scan hosts."
-LABEL author="Guillaume Rousse"
+LABEL name="IPinfo_Details"
+LABEL description="IPinfo details lookup."
+LABEL author="Manabu Niseki"
 
 WORKDIR /worker
 
-COPY . Nessus
+COPY . IPinfo_Details
 
 # Project determined to be Python, installing deps
-RUN pip install --no-cache-dir -r Nessus/requirements.txt
+RUN pip install --no-cache-dir -r IPinfo_Details/requirements.txt
 
-ENTRYPOINT Nessus/nessus.py
+ENTRYPOINT IPinfo/ipinfo_analyzer.py
