--- a/analyzers/AutoFocus/Dockerfile
+++ b/analyzers/AutoFocus/Dockerfile
@@ -7,15 +7,15 @@ FROM python:3-alpine
 
 RUN apk add --no-cache git
 
-LABEL name="AUTOFOCUS_GetSampleAnalysis"
+LABEL name="AutoFocus_GetSampleAnalysis"
 LABEL description="Get full analysis from a sample based on its hash"
 LABEL author="ANSSI"
 
 WORKDIR /worker
 
-COPY . AUTOFOCUS_GetSampleAnalysis
+COPY . AutoFocus_GetSampleAnalysis
 
 # Project determined to be Python, installing deps
-RUN pip install --no-cache-dir -r AUTOFOCUS_GetSampleAnalysis/requirements.txt
+RUN pip install --no-cache-dir -r AutoFocus_GetSampleAnalysis/requirements.txt
 
-ENTRYPOINT Autofocus/analyzer.py
+ENTRYPOINT AutoFocus/analyzer.py
